lot of small fixes (review/test/validate)

--- a/source/index.html
+++ b/source/index.html
@@ -17,10 +17,14 @@
             <svg width="55" height="55" viewBox="0 0 55 55" role="img" aria-hidden="true" focusable="false" aria-label="Логотип.">
               <use xlink:href="/img/sprite_auto.svg#logo"></use>
             </svg>
-            <p class="logo__text logo__text--header">
-              <span class="logo__text--big">Smart Device</span>
-              <span class="logo__text--small">умные технологии</span>
-            </p>
+            <div class="logo__text logo__text--header">
+              <svg width="133" height="20" role="img" aria-hidden="true" focusable="false" aria-label="Текст для логотипа Smart Device.">
+                <use xlink:href="/img/sprite_auto.svg#logo-text-smart"></use>
+              </svg>
+              <svg width="133" height="20" role="img" aria-hidden="true" focusable="false" aria-label="Текст для логотипа умные технологии.">
+                <use xlink:href="/img/sprite_auto.svg#logo-text-clever"></use>
+              </svg>
+            </div>
           </a>
           <div class="header__info">
             <a class="header__info-link" href="mailto:info@sd.ru">
@@ -59,28 +63,28 @@
           <h2 class="visually-hidden">Преимущества.</h2>
           <div class="container">
             <ul class="features__list">
-              <li class="features__item" tabindex="0">
+              <li class="features__item">
                 <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Преимущество - скорость.">
                   <use xlink:href="/img/sprite_auto.svg#feature-time"></use>
                 </svg>
                 <h3>Оперативные сроки</h3>
                 <p>Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки.</p>
               </li>
-              <li class="features__item" tabindex="0">
+              <li class="features__item">
                 <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Преимущество - скорость.">
                   <use xlink:href="/img/sprite_auto.svg#feature-suppliers"></use>
                 </svg>
                 <h3>Крупные поставщики</h3>
                 <p>Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспечивает хорошее качество нашей продукции.</p>
               </li>
-              <li class="features__item" tabindex="0">
+              <li class="features__item">
                 <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Преимущество - скорость.">
                   <use xlink:href="/img/sprite_auto.svg#feature-privacy"></use>
                 </svg>
                 <h3>Полная конфиденциальность</h3>
                 <p>По желанию клиента  мы обеспечиваем полную конфиденциальность.</p>
               </li>
-              <li class="features__item" tabindex="0">
+              <li class="features__item">
                 <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Преимущество - скорость.">
                   <use xlink:href="/img/sprite_auto.svg#feature-personalization"></use>
                 </svg>
@@ -172,10 +176,14 @@
               <svg width="55" height="55" role="img" aria-hidden="true" focusable="false" aria-label="Логотип.">
                 <use xlink:href="/img/sprite_auto.svg#logo"></use>
               </svg>
-              <p class="logo__text">
-                <span class="logo__text--big">Smart Device</span>
-                <span class="logo__text--small">умные технологии</span>
-              </p>
+              <div class="logo__text">
+                <svg width="133" height="20" role="img" aria-hidden="true" focusable="false" aria-label="Текст для логотипа Smart Device.">
+                  <use xlink:href="/img/sprite_auto.svg#logo-text-smart"></use>
+                </svg>
+                <svg width="133" height="20" role="img" aria-hidden="true" focusable="false" aria-label="Текст для логотипа умные технологии.">
+                  <use xlink:href="/img/sprite_auto.svg#logo-text-clever"></use>
+                </svg>
+              </div>
             </a>
             <ul class="socials">
               <li class="socials__item">
@@ -239,13 +247,13 @@
                   <a class="accordion__link" href="#">г. Мытищи, Олимпийский проспект, д.10</a>
                 </li>
                 <li class="accordion__item">
-                  <a class="accordion__link" href="#">+7 (495) 589-40-50</a>
+                  <a class="accordion__link" href="tel:+74955894050">+7 (495) 589-40-50</a>
                 </li>
                 <li class="accordion__item">
-                  <a class="accordion__link" href="#">+7 (925) 389-58-29</a>
+                  <a class="accordion__link" href="tel:+79253895829">+7 (925) 389-58-29</a>
                 </li>
                 <li class="accordion__item">
-                  <a class="accordion__link" href="#">+7 (925) 364-78-13</a>
+                  <a class="accordion__link" href="tel:+79253647813">+7 (925) 364-78-13</a>
                 </li>
               </ul>
             </div>
