--- a/source/index.html
+++ b/source/index.html
@@ -239,7 +239,7 @@
               </ul>
             </div>
           </div>
-          <div class="accordion__element is-active"  data-accordion="element">
+          <div class="accordion__element is-active accordion__element--contacts"  data-accordion="element">
             <button class="accordion__button" type="button" data-accordion="button">Наш офис</button>
             <div class="accordion__content" data-accordion="content">
               <ul class="accordion__list">
