tablet + mobile PP, testing, validating

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
       <header class="header">
         <div class="header__container container">
           <a class="header__logo logo">
-            <svg width="55" height="55" viewBox="0 0 55 55" role="img" aria-hidden="true" focusable="false" aria-label="Логотип.">
+            <svg width="55" height="55" role="img" aria-hidden="true" focusable="false" aria-label="Логотип.">
               <use xlink:href="/img/sprite_auto.svg#logo"></use>
             </svg>
             <div class="logo__text logo__text--header">
@@ -64,32 +64,32 @@
           <div class="container">
             <ul class="features__list">
               <li class="features__item">
-                <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Преимущество - скорость.">
+                <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Оперативные сроки.">
                   <use xlink:href="/img/sprite_auto.svg#feature-time"></use>
                 </svg>
                 <h3>Оперативные сроки</h3>
                 <p>Усовершенствованная логистическая система позволяет нам просчитывать стоимость, производить и доставлять заказы плат и комплектующих в самые короткие сроки.</p>
               </li>
               <li class="features__item">
-                <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Преимущество - скорость.">
+                <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Крупные поставщики.">
                   <use xlink:href="/img/sprite_auto.svg#feature-suppliers"></use>
                 </svg>
                 <h3>Крупные поставщики</h3>
                 <p>Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE, HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспечивает хорошее качество нашей продукции.</p>
               </li>
-              <li class="features__item">
-                <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Преимущество - скорость.">
+              <li class="features__item features__item--confidence">
+                <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Полная конфиденциальность.">
                   <use xlink:href="/img/sprite_auto.svg#feature-privacy"></use>
                 </svg>
                 <h3>Полная конфиденциальность</h3>
                 <p>По желанию клиента  мы обеспечиваем полную конфиденциальность.</p>
               </li>
-              <li class="features__item">
-                <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Преимущество - скорость.">
+              <li class="features__item features__item--personality">
+                <svg width="35" height="35" role="img" aria-hidden="true" focusable="false" aria-label="Персонализация стоимости.">
                   <use xlink:href="/img/sprite_auto.svg#feature-personalization"></use>
                 </svg>
                 <h3>Персонализация стоимости</h3>
-                <p>Мы  подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.</p>
+                <p>Мы  подбираем <br>определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену, которая Вас устраивает.</p>
               </li>
             </ul>
           </div>
@@ -122,13 +122,13 @@
             </h2>
             <ul class="products__list">
               <li class="products__item products__item--production">
-                <a class="products__link" href="#">Производство печатных плат</a>
+                <a class="products__link" href="#">Производство <br>печатных плат</a>
               </li>
               <li class="products__item products__item--mounting">
-                <a class="products__link" href="#">Монтаж печатных плат</a>
+                <a class="products__link" href="#">Монтаж <br>печатных <br>плат</a>
               </li>
               <li class="products__item products__item--accessories">
-                <a class="products__link" href="#">Комплектующие для светотехники</a>
+                <a class="products__link" href="#">Комплектующие <br>для светотехники</a>
               </li>
             </ul>
           </div>
@@ -176,7 +176,7 @@
               <svg width="55" height="55" role="img" aria-hidden="true" focusable="false" aria-label="Логотип.">
                 <use xlink:href="/img/sprite_auto.svg#logo"></use>
               </svg>
-              <div class="logo__text">
+              <div class="logo__text logo__text--footer">
                 <svg width="133" height="20" role="img" aria-hidden="true" focusable="false" aria-label="Текст для логотипа Smart Device.">
                   <use xlink:href="/img/sprite_auto.svg#logo-text-smart"></use>
                 </svg>
@@ -220,7 +220,7 @@
                   <a class="accordion__link" href="#">Продукты</a>
                 </li>
                 <li class="accordion__item">
-                  <a class="accordion__link" href="#">Производство печатных плат</a>
+                  <a class="accordion__link" href="#">Производство печатных <br>плат</a>
                 </li>
                 <li class="accordion__item">
                   <a class="accordion__link" href="#">Монтаж печатных плат</a>
