--- a/source/index.html
+++ b/source/index.html
@@ -209,7 +209,7 @@
               </li>
             </ul>
           </div>
-          <div class="accordion__element is-active accordion__element--navigation" data-accordion="element">
+          <div class="accordion__element is-active is-closed accordion__element--navigation" data-accordion="element">
             <button class="accordion__button" type="button" data-accordion="button">Разделы сайта</button>
             <div class="accordion__content accordion__content--navigation" data-accordion="content">
               <ul class="accordion__list">
@@ -239,7 +239,7 @@
               </ul>
             </div>
           </div>
-          <div class="accordion__element is-active accordion__element--contacts"  data-accordion="element">
+          <div class="accordion__element is-active is-closed accordion__element--contacts"  data-accordion="element">
             <button class="accordion__button" type="button" data-accordion="button">Наш офис</button>
             <div class="accordion__content" data-accordion="content">
               <ul class="accordion__list">
