--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
       <header class="header">
         <div class="header__container container">
-          <a class="header__logo logo">
+          <a class="header__logo" href="#">
             <picture>
               <source media="(max-width: 767px)" type="image/webp" srcset="/img/logo-short.webp 1x, /img/logo-short2x.webp 2x">
               <source media="(max-width: 767px)" type="image/png" srcset="/img/logo-short.png 1x, /img/logo-short2x.png 2x">
@@ -167,7 +167,7 @@
       <footer class="footer">
         <div class="footer__container container accordion" data-accordion="parent" data-single="data-single" data-destroy="(max-width: 767px)">
           <div class="footer__links">
-            <a class="footer__logo logo">
+            <a class="footer__logo"  href="#">
               <picture>
                 <source type="image/webp" srcset="./img/logo.webp 1x, ./img/logo2x.webp 2x">
                 <img width="215" height="55" src="./img/logo.png" loading="lazy" srcset="./img/logo2x.png 2x" alt="Логотип Smart Device.">
