name pattern fix (on test)

--- a/source/index.html
+++ b/source/index.html
@@ -144,7 +144,7 @@
                   <p>Мы проконсультируем Вас бесплатно</p>
                   <div class="form__inputs">
                     <label class="visually-hidden" for="name">Имя.</label>
-                    <input type="text" id="name" placeholder="Имя" name="name" pattern="^[а-яА-ЯёЁa-zA-Z-.]+$" minlength="2" maxlength="50" required>
+                    <input type="text" id="name" placeholder="Имя" name="name" pattern="^[а-яА-ЯёЁa-zA-Z-.]\s*+$" minlength="2" maxlength="50" required>
                     <label class="visually-hidden" for="phone">Телефон.</label>
                     <input type="tel" id="phone" placeholder="Телефон" name="phone" pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{10,10}$" required>
                     <label class="visually-hidden" for="question">Ваш вопрос.</label>
